# kollabium_notification

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml
deploy/: script.bash
monitoring/: prometheus.yml
src/: .env  .env-non-dev  gateway.py  main.py  requirements.txt
src/core/: cache.py  config.py  database.py  models.py  nats_client.py  profiles.py  router.py  template_loader.py  utils.py
src/crud/: models.py  repository.py  schemas.py
src/sinks/: __init__.py  telegram.py
src/texts/: airdrop_logs.py  donats_logs_telegram.py
src/worker/: metrics.py
src/worker/events/: airdrop.py  donats.py  registry.py
src/worker/routers/: airdrop.py  donats.py
src/worker/schemas/: airdrop.py
srs/core/: bus.py  config.py
srs/sinks/: base.py
srs/texts/: airdrop_logs.yaml
