[project]
name = "kollabium-notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.21.0",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "faststream[cli,nats]>=0.5.48",
    "greenlet>=3.2.4",
    "icecream>=2.1.5",
    "jinja2>=3.1.6",
    "logger>=1.4",
    "loguru>=0.7.3",
    "prometheus-client>=0.22.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn>=0.35.0",
]
